--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <center>
         <h1>Collage Web App </h1>
         <hr>
+        </center>
         <h4>Please press allow as soon as popup comes. After you give a voice command</h4>
-
+          <center>
         <h3>Say "selfie" for Taking your selfie to make a Collage</h3>
 
         <button class="btn btn-lg btn-primary" onclick="start()">Start</button>
